# warpgbm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
examples/: Spiral Dataset.ipynb
tests/: es_callback_test.py  full_numerai_test.py  numerai_test.py  test_fit_predict_corr.py  test_invariant.py
warpgbm/: __init__.py  core.py  metrics.py
warpgbm/cuda/: __init__.py  best_split_kernel.cu  binner.cu  histogram_kernel.cu  node_kernel.cpp  predict.cu
