[build-system]
requires = ["setuptools", "wheel", "torch", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "warpgbm"
version = "0.1.22"
description = "A fast GPU-accelerated Gradient Boosted Decision Tree library with PyTorch + CUDA"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "scikit-learn"
]